Criação de regra de negócio e dos testes de empréstimo
